Lots of screen work

--- a/textuality-app/client/views/screen/face/screenMain.html
+++ b/textuality-app/client/views/screen/face/screenMain.html
@@ -1,11 +1,11 @@
-<template name="screenMainMova">
+<template name="screenMain">
 	<div class="tscreen-main">
 		<canvas id="tscreen-canvas"></canvas>
 		{{>screenFeed}}
 		{{>screenFeature}}
 	</div>
 	<div class="tscreen-title-bar">
-		<h1 class="tscreen-textuality">Textuality @ <span class="tscreen-mova-logo"></span></h1>
+		<h1 class="tscreen-textuality">Textuality: <span class="tscreen-textuality-sub">The Face</span></h1>
 		<div class="tscreen-phone-number">571-989-4785</div>
 	</div>
 	{{>screenFooter}}
