--- a/textuality-app/client/views/screen/screenFeature.html
+++ b/textuality-app/client/views/screen/screenFeature.html
@@ -1,5 +1,6 @@
 <template name="screenFeature">
 	<div class="tscreen-feature-area {{widgetClass}}">
+
 		<div class="tscreen-featured-box tscreen-box">
 			<div class="tscreen-box-title">{{featuredLabel}}</div>
 			<div class="tscreen-box-content">
@@ -22,12 +23,8 @@
 			</div>
 		</div>
 
-		<div class="tscreen-april {{aprilClass}}">
-			<div class="tscreen-april-standing1"></div>
-			<div class="tscreen-april-standing2"></div>
-			<div class="tscreen-april-standing-selfie"></div>
-			<div class="tscreen-april-floating"></div>
-			<div class="tscreen-april-laying"></div>
+		<div class="tscreen-tilda">
+			<div class="tscreen-tilda-face"></div>
 		</div>
 	</div>
 </template>
