--- a/textuality-app/client/views/screen/screenFeed.html
+++ b/textuality-app/client/views/screen/screenFeed.html
@@ -7,9 +7,10 @@
 </template>
 
 <template name="screenFeedItem">
-		<div class="texts-feed-item {{textClass}} notransition" style="display: none;">
-		<div class="texts-feed-meta">
-			<div class="texts-feed-name">{{alias}}{{#if isMaster}} <i class="fa fa-heart"></i>{{/if}}</div>
+	<div class="texts-feed-item {{textClass}} notransition" style="display: none;">
+
+		<div class="texts-feed-meta" style="background-image:url('{{avatarUrl}}');">
+			<div class="texts-feed-name">{{#if isMaster}}<i class="fa fa-heart"></i> {{/if}}{{alias}}{{#if isMaster}} <i class="fa fa-heart"></i>{{/if}}</div>
 			<div class="texts-feed-badges">
 				{{#each badges}}
 					<i class="fa {{icon}}" style="color:{{color}}"></i>
@@ -23,6 +24,7 @@
 			</div>
 			{{/unless}}
 		</div>
+
 		<div class="texts-feed-text rel-time-data" data-utc="{{timeUtc}}" data-reltime="{{timeRelative time true}}">{{bodyFormatted}}</div>
 	</div>				
 </template>
