Not even trying to be granular at this point

--- a/textuality-app/client/views/screen/face/screenFeature.html
+++ b/textuality-app/client/views/screen/face/screenFeature.html
@@ -17,10 +17,14 @@
 			</div>
 		</div>
 		<div class="tscreen-leaderboard-box tscreen-box">
-			<div class="tscreen-box-title">April's Favesies</div>
+			<div class="tscreen-box-title">Tildren of Note</div>
 			<div class="tscreen-box-content">
 				{{>screenLeadersTable}}
 			</div>
+		</div>
+
+		<div class="tscreen-emotion-challenge">
+			{{>screenEmotionChallenge}}
 		</div>
 
 		<div class="tscreen-tilda">
