--- a/textuality-app/client/views/screen/face/screenFeatureArea.scss
+++ b/textuality-app/client/views/screen/face/screenFeatureArea.scss
@@ -7,14 +7,7 @@
     height: 100%;
     padding: 20px;
   }
-  /* line 9, sass/_interface-feature-area.scss */
-  .tscreen-april {
-    height: 80%;
-    width: 100%;
-    position: absolute;
-    bottom: 20px;
-    right: 20px;
-  }
+
   /* line 18, sass/_interface-feature-area.scss */
   .tscreen-admin-controls {
     position: absolute;
@@ -123,8 +116,16 @@
 
 
 .tscreen-tilda {
-  z-index: 1;
+  transition: transform 1500ms;
+  position: absolute;
+  width: 100%;
+  height: 80%;
+  bottom: 0;
+  right: 20px;
+  transform: translateY(100%);
 }
+
+
 
 .tscreen-tilda-face {
     position: absolute;
@@ -145,6 +146,12 @@
     animation-timing-function: ease-in-out;
 }
 
+  .tscreen-feature-area.normal .tscreen-tilda,
+  .tscreen-feature-area.question .tscreen-tilda {
+    transform: translateY(0);
+  }
+
+
 .tscreen-box {
   right: -100%;
 
@@ -163,6 +170,10 @@
   right: 20px;
 }
 
+.tscreen-feature-area.emotion .tscreen-emotion-challenge {
+  transform: translateX(0);
+}
+
 .tscreen-box-question {
     color: #F7D;
     font-weight: bold;
@@ -173,7 +184,7 @@
 
 @keyframes tildaHover {
   0% {
-    transform: translateY(0) skewX(1deg);
+    transform: translateY(0) skewX(0deg);
     opacity: 1;
   }
   50% {
@@ -181,6 +192,6 @@
   }
   100% {
     opacity: 1;
-    transform: translateY(5%) skewX(-3deg);
+    transform: translateY(5%) skewX(-5deg);
   }
 }
