--- a/textuality-app/client/views/screen/face/screenTitleBar.scss
+++ b/textuality-app/client/views/screen/face/screenTitleBar.scss
@@ -1,4 +1,4 @@
-$background-color: #220011;
+$background-color: #0e0412;
 $textuality-color: #FF3C70;
 $theface-color: #F38DFF;
 $phone-number-color: #FF3C70;
@@ -10,7 +10,7 @@ $phone-number-color: #FF3C70;
     top: 0;
     width: 100%;
     border-bottom: 1px solid #444444;
-    padding: 10px;
+    padding: 5px;
     background-color: $background-color;
     box-shadow: 0 0 4px;
   }
@@ -18,7 +18,7 @@ $phone-number-color: #FF3C70;
   .tscreen-textuality {
     float: left;
     font-family: "Roboto", sans-serif;
-    font-size: 3em;
+    font-size: 2.5em;
     color: $textuality-color;
   }
 
@@ -29,7 +29,7 @@ $phone-number-color: #FF3C70;
   .tscreen-phone-number {
     float: right;
     text-align: right;
-    font-size: 3em;
+    font-size: 2.5em;
     color: $phone-number-color;
     font-family: "Roboto", sans-serif;
     line-height: 1em;
