--- a/textuality-app/client/views/screen/face/screenFeature.html
+++ b/textuality-app/client/views/screen/face/screenFeature.html
@@ -27,6 +27,10 @@
 			{{>screenEmotionChallenge}}
 		</div>
 
+		<div class="tscreen-image-feed">
+			{{>screenImageFeed}}
+		</div>
+
 		<div class="tscreen-tilda">
 			<div class="tscreen-tilda-face"></div>
 		</div>
