--- a/textuality-app/client/views/screen/face/screenMain.html
+++ b/textuality-app/client/views/screen/face/screenMain.html
@@ -1,4 +1,7 @@
 <template name="screenMain">
+	<div class="tscreen-background-image">
+		<div style="background-image: url({{ backgroundImage }})"></div>
+	</div>
 	<div class="tscreen-main">
 		{{>screenFeed}}
 		{{>screenFeature}}
@@ -11,4 +14,5 @@
 	<div class="tscreen-overlay">
 		<div class="action-text">{{actionText}}</div>
 	</div>
+
 </template>
