--- a/textuality-app/client/views/screen/face/screenMain.scss
+++ b/textuality-app/client/views/screen/face/screenMain.scss
@@ -22,7 +22,6 @@
     border: 0;
     line-height: 1em;
   }
-
 }
 
 /* line 42, sass/interface.scss */
@@ -32,6 +31,40 @@
   height: 100%;
   width: 100%;
 }
+
+.tscreen-shell .tscreen-background-image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+
+  div {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-size: cover;
+    background-position: center;
+    opacity: 0;
+    transform: scale(0);
+    filter: hue-rotate(0);
+    transition: -webkit-filter 10s linear,
+                opacity .5s ease-in,
+                transform 1s cubic-bezier(.5,0,.5,2);
+  }
+
+  &.active {
+    div {
+      opacity: .5;
+      transform: scale(1);
+      filter: hue-rotate(1080deg);
+    }
+
+  }
+}
+
 
 .tscreen-shell .tscreen-overlay {
   display: none;
@@ -69,7 +102,7 @@
 
 .tscreen-shell.actionText .tscreen-overlay {
   display: block;
-} 
+}
 
 @keyframes actionText {
   0% {
