--- a/textuality-app/client/views/screen/screenFooter.html
+++ b/textuality-app/client/views/screen/screenFooter.html
@@ -1,33 +1,14 @@
 <template name="screenFooter">
 	<div class="tscreen-bottom-bar">
-		<div class="tscreen-ticker">
-			<span class="tscreen-ticker-group">
-				<span class="tscreen-ticker-item"><span class="hashtag">#change</span> Change your name</span>
-				<span class="tscreen-ticker-item"><span class="hashtag">#avatar</span> Change your icon</span>
-			</span>
-			<span class="tscreen-ticker-group">
-				<span class="tscreen-ticker-item">Find <span class="hashtag">#hashtags</span>  to fill your checkin meter ( <span class="achievement-square"></span> <span class="achievement-square"></span> <span class="achievement-square"></span> <span class="achievement-square"></span> <span class="achievement-square"></span> <span class="achievement-square"></span> <span class="achievement-square"></span> <span class="achievement-square"></span> <span class="achievement-square"></span> <span class="achievement-square"></span> )</span>
-			</span>
-			<span class="tscreen-ticker-group">
-				<span class="tscreen-ticker-item">Badges:</span>
-				<span class="tscreen-ticker-item"><i class="fa fa-star"></i> Top Texter</span>
-				<span class="tscreen-ticker-item"><i class="fa fa-location-arrow"></i> All checkins</span>
-				<span class="tscreen-ticker-item"><i class="fa fa-umbrella"></i> <i class="fa fa-leaf"></i> Secrets</span>
-			</span>
-			<span class="tscreen-ticker-group">
-				<span class="tscreen-ticker-item"><span class="hashtag">#change</span> Change your name</span>
-				<span class="tscreen-ticker-item"><span class="hashtag">#goodbye</span> Sign out</span>
-				<span class="tscreen-ticker-item"><span class="hashtag">#remote</span> Participating remotely</span>
-			</span>
-			<span class="tscreen-ticker-group">
-				<span class="tscreen-ticker-item">Find <span class="hashtag">#hashtags</span> around the venue to fill your checkin meter ( <span class="achievement-square"></span> <span class="achievement-square"></span> <span class="achievement-square"></span> <span class="achievement-square"></span> <span class="achievement-square"></span> <span class="achievement-square"></span> <span class="achievement-square"></span> <span class="achievement-square"></span> <span class="achievement-square"></span> <span class="achievement-square"></span> )</span>
-			</span>
-			<span class="tscreen-ticker-group">
-				<span class="tscreen-ticker-item">Badges:</span>
-				<span class="tscreen-ticker-item"><i class="fa fa-star"></i> Top Texter</span>
-				<span class="tscreen-ticker-item"><i class="fa fa-location-arrow"></i> All checkins</span>
-				<span class="tscreen-ticker-item"><i class="fa fa-umbrella"></i> <i class="fa fa-leaf"></i> Secrets</span>
-			</span>
+		<div class="tscreen-left-eyes">
+			{{#each faceCrops}}
+				<div class="tscreen-eye" style="background-image:url({{image.transforms.lEye}})"></div>
+			{{/each}}
+		</div>
+		<div class="tscreen-right-eyes">
+			{{#each faceCrops}}
+				<div class="tscreen-eye" style="background-image:url({{image.transforms.rEye}})"></div>
+			{{/each}}
 		</div>
 	</div>
 </template>
