--- a/textuality-admin/client/main.scss
+++ b/textuality-admin/client/main.scss
@@ -8,3 +8,7 @@ $body-bg: #290948;
 .react-bootstrap-table th[data-row-selection] {
   width: 50px !important;
 }
+
+.alias-pill {
+  margin: 0 5px 5px 0;
+}
