--- a/textuality-client/client/main.scss
+++ b/textuality-client/client/main.scss
@@ -14,6 +14,7 @@ $white: #ffffff;
 }
 
 body {
+  background-image: url('/au-background-dark.png');
   background-color: $bg;
   color: $white;
 }
@@ -41,10 +42,55 @@ header {
   align-items: center;
 }
 
+.feed {
+  padding: 60px 20px 20px 20px;
+  overflow: hidden;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  height: 100%;
+}
+
+.feedItem {
+  display: flex;
+  flex-direction: row;
+  margin-bottom: 20px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+.feedItem-player {
+  display: flex;
+  flex-direction: row;
+  margin-right: 30px;
+}
+
+.feedItem-player-text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.feedItem-avatar {
+  height: 60px;
+  width: 60px;
+  margin-right: 10px;
+}
+
 .host {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   right: 0;
-  height: 40%;
-  width: 40%;
+  height: 400px;
+  width: 400px;
+  background-color: #000;
+  overflow: hidden;
+  border-top: 1px solid $yellow;
+  border-left: 1px solid $yellow;
+}
+
+video {
+  object-fit: fill;
+  height: 100%;
+  width: 100%;
 }
