--- a/textuality-client/client/styles/modules/Pairing.scss
+++ b/textuality-client/client/styles/modules/Pairing.scss
@@ -28,7 +28,7 @@
   max-height: 40vh;
   max-width: 30vw;
   border-radius: 2vw;
-  box-shadow: 0 0 10px 10px $pink;
+  box-shadow: 0 0 10px 10px var(--white);
 }
 
 .pairing-player {
