--- a/textuality-client/client/styles/modules/AchievementsBox.css
+++ b/textuality-client/client/styles/modules/AchievementsBox.css
@@ -1,5 +1,3 @@
-@import '../colors';
-
 .achievementsBox {
   background-color: rgba(0, 0, 0, 0.95);
   position: absolute;
@@ -20,7 +18,7 @@
   align-items: center;
   justify-content: space-around;
 
-  font-family: Arial, sans-serif;
+  font-family: dashiell-fine, serif;
 
   animation-name: achievementAnim;
   animation-duration: 9500ms;
@@ -40,18 +38,18 @@
 }
 
 .achievementSquare-name {
-  color: $white;
+  color: var(--white);
   font-weight: bold;
   text-transform: uppercase;
   font-size: 2.3vw;
+}
 
-  &:before {
-    content: '"';
-  }
+.achievementSquare-name:before {
+  content: '"';
+}
 
-  &:after {
-    content: '"';
-  }
+.achievementSquare-name:after {
+  content: '"';
 }
 
 .achievementSquare-player {
@@ -64,7 +62,7 @@
   max-width: 15vw;
   max-height: 20vh;
   border-radius: 15px;
-  box-shadow: 0 0 10px $pink;
+  box-shadow: 0 0 10px var(--white);
 }
 
 .achievementSquare-alias {
