--- a/textuality-client/client/styles/modules/BottomBar.css
+++ b/textuality-client/client/styles/modules/BottomBar.css
@@ -1,15 +1,13 @@
-@import '../colors';
-
 .bottomBar {
   background-color: #000;
-  border-top: 2px solid $yellow;
+  border-top: 2px solid var(--yellow);
   box-shadow: 0 -20px 20px #000;
   width: 100%;
   height: 40px;
-  font-family: Arial, serif;
+  font-family: dashiell-fine, serif;
   font-size: 1.4vw;
   padding: 5px 10px;
-  color: $yellow;
+  color: var(--yellow);
 
   position: absolute;
   bottom: 0;
@@ -23,24 +21,24 @@
 }
 
 .bottomBar-item {
-  &:first-child {
-    border: none;
-  }
-
   border-left: 1px solid #fff;
   text-align: center;
 
   flex-grow: 1;
 }
 
-.bottomBar-command {
-  &:after {
-    content: '  ';
-    font-weight: normal;
-    color: $yellow;
-  }
+.bottomBar-item::before {
+  border-left: none;
+}
 
+.bottomBar-command {
   font-weight: bold;
   font-family: monospace;
-  color: white;
+  color: var(--white);
+}
+
+.bottomBar-command::after {
+  content: '  ';
+  font-weight: normal;
+  color: var(--yellow);
 }
