Progress on stuff

--- a/textuality-client/client/main.css
+++ b/textuality-client/client/main.css
@@ -4,7 +4,7 @@
   --white: #f3fcf0;
   --red: #c23737;
   --yellow: #c7b748;
-  --green: #74c76d;
+  --green: #3d9355;
   --blue: #449fca;
   --plum: #8344ca;
 }
