--- a/textuality-client/client/styles/modules/BottomBar.css
+++ b/textuality-client/client/styles/modules/BottomBar.css
@@ -3,10 +3,10 @@
   border-top: 2px solid var(--yellow);
   box-shadow: 0 -20px 20px #000;
   width: 100%;
-  height: 40px;
+  height: 70px;
   font-family: dashiell-fine, serif;
   font-size: 1.4vw;
-  padding: 5px 10px;
+  padding: 10px 10px;
   color: var(--yellow);
 
   position: absolute;
@@ -23,11 +23,16 @@
 .bottomBar-item {
   border-left: 1px solid #fff;
   text-align: center;
+  height: 100%;
 
   flex-grow: 1;
+
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
-.bottomBar-item::before {
+.bottomBar-item:first-child {
   border-left: none;
 }
 
