--- a/textuality-client/client/styles/modules/BottomBar.css
+++ b/textuality-client/client/styles/modules/BottomBar.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 70px;
   font-family: dashiell-fine, serif;
-  font-size: 1.4vw;
+  font-size: 24px;
   padding: 10px 10px;
   color: var(--yellow);
 
@@ -40,6 +40,10 @@
   font-weight: bold;
   font-family: monospace;
   color: var(--white);
+}
+
+.bottomBar-info {
+  font-weight: bold;
 }
 
 .bottomBar-command::after {
