--- a/textuality-client/imports/ui/modules/SlotMachine/reel.css
+++ b/textuality-client/imports/ui/modules/SlotMachine/reel.css
@@ -6,30 +6,11 @@
   box-shadow: inset 0vw 1vw 4vw 0vw black;
 }
 
-@media only screen and (min-width: 768px) {
-}
-
 .reel {
   display: inline-block;
   height: 50vw;
   position: relative;
-  transition: transform 1s ease; /* Transition effect for smooth spin */
-}
-
-.reel::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  background-image: linear-gradient(
-    rgba(black, 0.4) 0%,
-    transparent 30%,
-    transparent 70%,
-    rgba(black, 0.4) 100%
-  );
-  box-shadow: inset 0 0 6px 2px rgba(black, 0.3);
+  transition: transform 500ms ease;
 }
 
 .reel img {
@@ -42,10 +23,10 @@
     transform: translateY(0);
   }
   100% {
-    transform: translateY(calc(-20vw * 6));
+    transform: translateY(calc(-52vw * 6));
   }
 }
 
 .spinning {
-  animation: spin 1s linear infinite;
+  animation: spin 500ms linear infinite;
 }
