--- a/textuality-client/imports/ui/modules/SlotMachine/slot-machine.css
+++ b/textuality-client/imports/ui/modules/SlotMachine/slot-machine.css
@@ -1,6 +1,4 @@
 .slot-machine {
-  /* background-image: url('\/images/slot-machine/background1.jpg'); */
-
   background-size: contain;
   background-repeat: repeat;
   height: 100vh;
@@ -28,34 +26,18 @@
   font-family: gin, serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 12vw;
 }
-
-.subtitle {
-  font-family: gin, serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 8vw;
-}
-
-/* .title-italic {
-  font-family: gin, serif;
-  font-weight: 400;
-  font-style: normal;
-} */
 
 .body {
   font-family: rockwell-nova, sans-serif;
   font-weight: 400;
   font-style: normal;
-  font-size: 7vw;
 }
 
-.body-small {
+.body-medium {
   font-family: rockwell-nova, sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 5.5vw;
+  font-weight: 700;
+  font-style: medium;
 }
 
 .align-right {
@@ -67,30 +49,6 @@
   justify-content: flex-end;
 }
 
-/* .body-italic {
-  font-family: rockwell-nova, sans-serif;
-  font-weight: 400;
-  font-style: italic;
+.text-center {
+  text-align: center;
 }
-
-.body-medium {
-  font-family: rockwell-nova, sans-serif;
-  font-weight: 700;
-  font-style: normal;
-}
-
-.body-medium-italic {
-  font-family: rockwell-nova, sans-serif;
-  font-weight: 700;
-  font-style: italic;
-} */
-
-/* .slot-machine::after {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  box-shadow: inset 5em 3em gold;
-} */
