--- a/textuality-client/imports/ui/modules/Roulette/RouletteWheel.css
+++ b/textuality-client/imports/ui/modules/Roulette/RouletteWheel.css
@@ -118,8 +118,8 @@ body {
 }
 .plate {
   background-color: gray;
-  width: 350px;
-  height: 350px;
+  width: 600px;
+  height: 600px;
   margin: 12px;
   border-radius: 50%;
   position: relative;
@@ -138,10 +138,10 @@ body {
   right: -6px;
   bottom: -6px;
   left: -6px;
-  border: 6px solid #fea70a;
+  border: 6px solid gold;
   box-shadow:
-    inset 0px 0px 0px 2px #ac7001,
-    0px 0px 0px 2px #ffd17c;
+    inset 0px 0px 0px 2px #b39700,
+    0px 0px 0px 2px #ffeb80;
 }
 .plate:before {
   background: rgba(0, 0, 0, 0.65);
@@ -154,41 +154,44 @@ body {
   z-index: 1;
 }
 .number {
-  width: 32px;
-  height: 175px;
+  width: 48px;
+  height: 300px;
   display: inline-block;
   text-align: center;
   position: absolute;
   top: 0;
-  left: calc(50% - (32px / 2));
+  left: calc(50% - (48px / 2));
   transform-origin: 50% 100%;
   background-color: transparent;
-  border-left: 16px solid transparent;
-  border-right: 16px solid transparent;
-  border-top: 175px solid black;
+  border-left: 24px solid transparent;
+  border-right: 24px solid transparent;
+  border-top: 300px solid black;
   box-sizing: border-box;
 }
 .number:nth-child(odd) {
-  border-top-color: #d01935;
+  border-top-color: red;
 }
 .number:nth-child(37) {
   border-top-color: green;
 }
 .pit {
   color: #fff;
-  padding-top: 12px;
-  width: 32px;
+  padding-top: 16px;
+  width: 48px;
   display: inline-block;
-  font-size: 12px;
+  font-size: 20px;
+  font-family: rockwell-nova, sans-serif;
+  font-weight: 700;
+  font-style: normal;
   transform: scale(1, 1.8);
   position: absolute;
-  top: -175px;
-  left: -16px;
+  top: -300px;
+  left: -24px;
 }
 .inner {
   display: block;
-  height: 350px;
-  width: 350px;
+  height: 600px;
+  width: 600px;
   position: relative;
 }
 .inner:after,
@@ -214,193 +217,193 @@ body {
   right: 22%;
   content: '';
   color: #fff;
-  font-size: 60px;
+  font-size: 80px;
   z-index: 5;
   border-radius: 0;
 }
 .inner[data-spinto='1']:before {
-  transform: rotateZ(-2602deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-15922deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='2']:before {
-  transform: rotateZ(-2774deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-16091deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='3']:before {
-  transform: rotateZ(-2850deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-16170deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='4']:before {
-  transform: rotateZ(-2793deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-16111deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='5']:before {
-  transform: rotateZ(-2642deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-15962deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='6']:before {
-  transform: rotateZ(-2734deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-16054deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='7']:before {
-  transform: rotateZ(-2526deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-15846deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='8']:before {
-  transform: rotateZ(-2673deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-15993deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='9']:before {
-  transform: rotateZ(-2564deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-15884deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='10']:before {
-  transform: rotateZ(-2652deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-15972deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='11']:before {
-  transform: rotateZ(-2693deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-16013deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='12']:before {
-  transform: rotateZ(-2868deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-16188deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='13']:before {
-  transform: rotateZ(-2714deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-16034deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='14']:before {
-  transform: rotateZ(-2582deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-15902deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='15']:before {
-  transform: rotateZ(-2813deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-16130deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='16']:before {
-  transform: rotateZ(-2622deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-15944deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='17']:before {
-  transform: rotateZ(-2755deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-16075deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='18']:before {
-  transform: rotateZ(-2545deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-15865deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='19']:before {
-  transform: rotateZ(-2803deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-16123deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='20']:before {
-  transform: rotateZ(-2592deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-15912deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='21']:before {
-  transform: rotateZ(-2784deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-16104deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='22']:before {
-  transform: rotateZ(-2554deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-15877deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='23']:before {
-  transform: rotateZ(-2662deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-15982deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='24']:before {
-  transform: rotateZ(-2632deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-15952deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='25']:before {
-  transform: rotateZ(-2764deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-16084deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='26']:before {
-  transform: rotateZ(-2840deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-16161deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='27']:before {
-  transform: rotateZ(-2724deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-16044deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='28']:before {
-  transform: rotateZ(-2877deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-16197deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='29']:before {
-  transform: rotateZ(-2535deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-15855deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='30']:before {
-  transform: rotateZ(-2684deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-16004deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='31']:before {
-  transform: rotateZ(-2573deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-15895deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='32']:before {
-  transform: rotateZ(-2822deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-16140.5deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='33']:before {
-  transform: rotateZ(-2612deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-15934deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='34']:before {
-  transform: rotateZ(-2745deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-16065deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='35']:before {
-  transform: rotateZ(-2499deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-15819deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='36']:before {
-  transform: rotateZ(-2703deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-16023deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner[data-spinto='0']:before {
-  transform: rotateZ(-2831deg);
-  transition: transform 9s ease-out;
+  transform: rotateZ(-16151deg);
+  transition: transform 45s ease-out;
   content: '\2022';
 }
 .inner.rest:before {
@@ -409,10 +412,10 @@ body {
     right 0.5s ease-in,
     bottom 0.5s ease-in,
     left 0.5s ease-in;
-  top: 25%;
-  right: 25%;
-  bottom: 24%;
-  left: 25%;
+  top: 25.7%;
+  right: 25.7%;
+  bottom: 25.7%;
+  left: 25.7%;
 }
 .btn {
   background: green;
@@ -423,7 +426,7 @@ body {
   margin: 0;
   display: inline-block;
   font-size: 15px;
-  width: 175px;
+  width: 300px;
   padding: 12px;
   margin: 12px;
   cursor: pointer;
@@ -523,26 +526,6 @@ body {
   font-size: 21px;
   line-height: 1;
 }
-.previous-results {
-  max-width: 350px;
-  margin: 24px 12px;
-}
-.previous-list {
-  perspective: 2000;
-}
-.previous-result {
-  display: flex;
-  margin: 1px;
-  padding: 12px;
-  color: #fff;
-}
-.previous-result:first-child {
-  -webkit-animation: flipin 0.48s ease-out;
-  animation: flipin 0.48s ease-out;
-}
-.previous-result .previous-number {
-  flex: 1;
-}
 .color-green {
   background-color: green;
 }
@@ -552,16 +535,7 @@ body {
 .color-#D01935 {
   background-color: #d01935;
 }
-.visuallyhidden {
-  position: absolute;
-  overflow: hidden;
-  clip: rect(0 0 0 0);
-  height: 1px;
-  width: 1px;
-  margin: -1px;
-  padding: 0;
-  border: 0;
-}
+
 @-webkit-keyframes flipin {
   0% {
     transform: rotateX(90deg);
